Functions , Arays and objects done

--- a/conditionals.html
+++ b/conditionals.html
@@ -7,6 +7,13 @@
   </head>
   <body>
     <h1>Yo phone Lingin'</h1>
+    <div class="Container">
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum facere nesciunt magnam facilis voluptate ad et molestiae dolor vel debitis a eveniet, error fugit ipsa ducimus? Corporis praesentium minima repudiandae.
+        Assumenda suscipit nihil dignissimos, provident labore earum deserunt commodi accusantium placeat architecto eos corrupti vel et ad? Impedit nemo error excepturi. Saepe consequatur ex perspiciatis iusto quod. Explicabo, aut sunt?
+        Amet fuga nulla hic omnis alias error tenetur soluta dolore beatae nihil enim ab, quasi provident quae exercitationem itaque explicabo quod natus! Eaque impedit nulla, alias soluta porro autem velit?
+      </p>
+    </div>
 
     <!-- <script>
       let exprr = prompt("Choose your favourite fruit")
@@ -70,7 +77,7 @@
 // }
 
 
-
+/*
 let cn = 4
 let i;
 
@@ -79,9 +86,15 @@ while (i != cn) {
     console.log("Try again");   
 }
 
-console.log("You guessed the correct number");
+console.log("You guessed the correct number");*/
+
+
+        let name = new Array(16 , 2 , 3 , 4 ,"Shaurya" , undefined);
+        name = name.sort();
+        name.push("This is pushed")
+        console.log(name);
+
     </script>
-    
 </script>
   </body>
 </html>
