Loops are so fkn easy

--- a/conditionals.html
+++ b/conditionals.html
@@ -89,10 +89,36 @@ while (i != cn) {
 console.log("You guessed the correct number");*/
 
 
-        let name = new Array(16 , 2 , 3 , 4 ,"Shaurya" , undefined);
-        name = name.sort();
-        name.push("This is pushed")
-        console.log(name);
+        // let name = new Array(16 , 2 , 3 , 4 ,"Shaurya" , undefined);
+        // name = name.sort();
+        // name.push("This is pushed")
+        // console.log(name);
+
+
+//         let deletePost = confirm("Do you really want to delete this post?")
+
+// if(deletePost){
+//     console.log("Your post has been deleted successfully");
+    
+// }
+
+// else{
+//     console.log("Your post has not been deleted");
+    
+// }
+// console.log(deletePost);
+
+let age = prompt("What is your age?", "Your age");
+
+if(age>18){
+  console.log("You are eligibe to enter this website");
+  
+}
+
+else{
+  console.log("You do not meet the age criteria to enter this website");
+  
+}
 
     </script>
 </script>
